--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,7 @@ dist-ssr
 *.local
 
 # Editor directories and files
-.vscode/*
-!.vscode/extensions.json
+.vscode/
 .idea
 .DS_Store
 *.suo
@@ -108,12 +107,24 @@ celerybeat.pid
 # SageMath parsed files
 *.sage.py
 
-# Environments
+# Environment files (keep templates, ignore actual env files)
 .env
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
+*.env.local
+
+# Sensitive configuration files
+config/secrets.json
+config/production.json
+*.key
+*.pem
+*.p12
+*.pfx
+
+# Database files with sensitive data
+*.db
+*.sqlite
+*.sqlite3
+ceybyte_pos*.db
 
 # Spyder project settings
 .spyderproject
