--- a/package.json
+++ b/package.json
@@ -15,12 +15,11 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@ant-design/cssinjs": "^1.24.0",
+    "@ant-design/icons": "^6.0.0",
     "@hookform/resolvers": "^5.1.1",
-    "@radix-ui/react-dialog": "^1.1.14",
-    "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-slot": "^1.2.3",
     "@tauri-apps/api": "^1.5.0",
-    "class-variance-authority": "^0.7.1",
+    "antd": "^5.26.6",
     "clsx": "^2.1.1",
     "i18next": "^25.3.2",
     "i18next-browser-languagedetector": "^8.2.0",
