--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tauri-apps/api": "^1.5.0",
     "antd": "^5.26.6",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "i18next": "^25.3.2",
     "i18next-browser-languagedetector": "^8.2.0",
     "i18next-http-backend": "^3.0.2",
