--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-hook-form": "^7.60.0",
     "react-i18next": "^15.6.0",
     "react-router-dom": "^7.7.0",
+    "recharts": "^3.1.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.0.5"
   },
